# ChangeLog for dev-lang/gnat
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/dev-lang/gnat/ChangeLog,v 1.18 2003/10/06 11:38:28 dholm Exp $

*gnat-5.0_pre20031005 (06 Oct 2003)

  06 Oct 2003; David Holm <dholm@gentoo.org> gnat-5.0_pre20031005.ebuild:
  Updated to a new GNAT-5.0 CVS snapshot.

  06 Oct 2003; David Holm <dholm@gentoo.org> gnat-5.0_pre20030822.ebuild:
  Small fix for installing the bootstrap compiler on x86.

  06 Oct 2003; David Holm <dholm@gentoo.org> gnat-3.15p-r3.ebuild,
  gnat-5.0_pre20030822.ebuild:
  Minor gnat-5.0 ebuild fix.
  Moved gnat-3.15p-r3 to stable on x86.

  04 Oct 2003; David Holm <dholm@gentoo.org> gnat-3.15p-r3.ebuild,
  files/gnat-3.15p-i686-pc-linux-gnu-bin.patch:
  Added installation fix on x86 submitted by Olivier Crete <tester@gentoo.org>.

  30 Sep 2003; David Holm <dholm@gentoo.org> gnat-3.15p-r3.ebuild:
  Added some more compilation fixes for x86 along with more descripting error
  messages.

  30 Sep 2003; David Holm <dholm@gentoo.org> gnat-3.15p-r3.ebuild:
  Compile gnat with "-O2 -gnatpgn" and without "-fPIC" (for static libs) as
  suggested by Maxim Reznik <max1@mbank.com.ua>. Validated with acats4gnat 0.7.

  29 Sep 2003; David Holm <dholm@gentoo.org> gnat-3.15p-r3.ebuild:
  Fixed a minor build problem on x86.

*gnat-3.15p-r3 (28 Sep 2003)

  28 Sep 2003; David Holm <dholm@gentoo.org>
  gnat-3.15p-r3.ebuild, files/gnat-3.15p-gentoo.patch.bz2,
  files/gnat-3.15p-noaddr2line.patch.bz2:
  Added gnat-3.15p-r3 which has now passed 26/26 of ACATS tests on x86 and 24/26
  on ppc (because ppc does not provide a threading system yet).

  20 Sep 2003; David Holm <dholm@gentoo.org> gnat-3.15p-r2.ebuild:
  Placed the powerpc bootstrap compiler on dev.gentoo.org while rsync is being
  fixed (suggested by seemant).

  18 Sep 2003; David Holm <dholm@gentoo.org> gnat-3.15p-r2.ebuild:
  I forgot to set the CFLAGS before running configure which would cause a